@@ -1,3 +1,8 @@
+2007-11-27  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_cancelJob): Use job-id instead of
+	job-uri.
+
 2007-11-22  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_getPrinterAttributes): Fixed
